--- a/11.md
+++ b/11.md
@@ -1,3 +1,3 @@
 # Производная функции в точке
 
-Рассмотрим функцию $y = f(x)$ (синий график), которая определена и непрерывна на некотором интервале, произвольную точку $x{0}$, принадлежащую данному интервалу, и соответствующее значение $f(x{0})$:
+Рассмотрим функцию $y = f(x)$ (синий график), которая определена и непрерывна на некотором интервале, произвольную точку $x_{0}$, принадлежащую данному интервалу, и соответствующее значение $f(x_{0})$:
