--- a/11.md
+++ b/11.md
@@ -1,3 +1,8 @@
 # Производная функции в точке
 
 Рассмотрим функцию $y = f(x)$ (синий график), которая определена и непрерывна на некотором интервале, произвольную точку $x_{0}$, принадлежащую данному интервалу, и соответствующее значение $f(x_{0})$:
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="http://www.mathprofi.ru/i/opredelenie_proizvodnoi_smysl_proizvodnoi_clip_image081.jpg">
+ <source media="(prefers-color-scheme: light)" srcset="http://www.mathprofi.ru/i/opredelenie_proizvodnoi_smysl_proizvodnoi_clip_image081.jpg">
+ <img alt="11.1" src="http://www.mathprofi.ru/i/opredelenie_proizvodnoi_smysl_proizvodnoi_clip_image081.jpg">
+</picture>
