--- a/11.md
+++ b/11.md
@@ -1,5 +1,8 @@
 # Производная функции в точке
 
+Определение: производной функции в точке $x_{0}$ называется предел отношения приращения функции $Δy$ к вызвавшему его приращению аргумента $Δx$ в этой точке при $Δx → 0$ . Или коротко:
+
+
 Рассмотрим функцию $y = f(x)$ (синий график), которая определена и непрерывна на некотором интервале, произвольную точку $x_{0}$, принадлежащую данному интервалу, и соответствующее значение $f(x_{0})$:
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="http://www.mathprofi.ru/i/opredelenie_proizvodnoi_smysl_proizvodnoi_clip_image081.jpg">
