--- a/11.md
+++ b/11.md
@@ -3,7 +3,7 @@
 Определение: производной функции в точке $x_{0}$ называется предел отношения приращения функции $Δy$ к вызвавшему его приращению аргумента $Δx$ в этой точке при $Δx → 0$ . Или коротко:
 
 $$ 
-lim_{Δx \to 0} Δy / Δx
+\lim_{\Delta x \to 0} \frac{f(x + \Delta x) - f(x)}{\Delta x}
 $$
 
 Рассмотрим функцию $y = f(x)$ (синий график), которая определена и непрерывна на некотором интервале, произвольную точку $x_{0}$, принадлежащую данному интервалу, и соответствующее значение $f(x_{0})$:
