--- a/11.md
+++ b/11.md
@@ -6,7 +6,7 @@ $$
 \lim_{\Delta x \to 0} \frac{\Delta y}{\Delta x}
 $$
 
-Если данный предел конечен, то функция $y = f(x)$ является дифференцируемой в точке $x_{0}$ .  А то, что в львиной доле случаев предел $$\lim_{\Delta x \to 0} \frac{\Delta y}{\Delta x}$$ существует и конечен.
+Если данный предел конечен, то функция $y = f(x)$ является дифференцируемой в точке $x_{0}$ .  А то, что в львиной доле случаев предел $\lim_{\Delta x \to 0} \frac{\Delta y}{\Delta x}$ существует и конечен.
 
 Рассмотрим функцию $y = f(x)$ (синий график), которая определена и непрерывна на некотором интервале, произвольную точку $x_{0}$, принадлежащую данному интервалу, и соответствующее значение $f(x_{0})$:
 <picture>
