--- a/11.md
+++ b/11.md
@@ -16,3 +16,5 @@ $$
  <source media="(prefers-color-scheme: light)" srcset="http://www.mathprofi.ru/i/opredelenie_proizvodnoi_smysl_proizvodnoi_clip_image081.jpg">
  <img alt="11.1" src="http://www.mathprofi.ru/i/opredelenie_proizvodnoi_smysl_proizvodnoi_clip_image081.jpg">
 </picture>
+
+Зададим аргументу функции приращение $\Delta x$
