--- a/11.md
+++ b/11.md
@@ -17,4 +17,4 @@ $$
  <img alt="11.1" src="http://www.mathprofi.ru/i/opredelenie_proizvodnoi_smysl_proizvodnoi_clip_image081.jpg">
 </picture>
 
-Зададим аргументу функции приращение $\Delta x$
+Зададим аргументу функции приращение $\Delta x$ (красный отрезок) в точке $x_{0}$. Обратите внимание, что $x_{0} + \Delta x$  – это тоже вполне определённая точка нашего интервала (на всякий случай отметил её малиновым цветом). И в этой точке существует своё значение функции $f(x_{0} + \Delta x)$
