--- a/11.md
+++ b/11.md
@@ -18,3 +18,6 @@ $$
 </picture>
 
 Зададим аргументу функции приращение $\Delta x$ (красный отрезок) в точке $x_{0}$. Обратите внимание, что $x_{0} + \Delta x$  – это тоже вполне определённая точка нашего интервала (на всякий случай отметил её малиновым цветом). И в этой точке существует своё значение функции $f(x_{0} + \Delta x)$
+
+Приращение аргумента $\Delta x$ повлекло за собой приращение функции:$\Delta y = f(x_{0} + \Delta x) - f(x_{0})$  (малиновый отрезок)
+
