--- a/11.md
+++ b/11.md
@@ -21,3 +21,6 @@ $$
 
 Приращение аргумента $\Delta x$ повлекло за собой приращение функции: $\Delta y = f(x_{0} + \Delta x) - f(x_{0})$  (малиновый отрезок)
 
+В данном случае $\Delta y > 0$ , поскольку в качестве примера выбран промежуток, на котором функция возрастает.
+
+Давайте сразу возьмём на заметку, что нарисовалось в результате проделанных действий. Ну, конечно же, в глаза бросается секущая $KL$ (коричневая прямая) и прямоугольный треугольник $KLN$.
