--- a/11.md
+++ b/11.md
@@ -24,3 +24,9 @@ $$
 В данном случае $\Delta y > 0$ , поскольку в качестве примера выбран промежуток, на котором функция возрастает.
 
 Давайте сразу возьмём на заметку, что нарисовалось в результате проделанных действий. Ну, конечно же, в глаза бросается секущая $KL$ (коричневая прямая) и прямоугольный треугольник $KLN$.
+
+Угол наклона секущей к оси $OX$ я обозначил через $a$  и отметил его коричневой дугой в двух местах. Такое внимание к данному углу не случайно – он однозначно определяется приращениями  $\Delta x$ и $\Delta y$ . Рассмотрим прямоугольный треугольник  и угол $a = \angle LKN$. Согласно школьному определению, тангенс угла равен отношению противолежащего катета к прилежащему катету: 
+
+$$
+tg(a) = LN/KN = \Delta y/\Delta x
+$$
