--- a/11.md
+++ b/11.md
@@ -28,5 +28,5 @@ $$
 Угол наклона секущей к оси $OX$ я обозначил через $a$  и отметил его коричневой дугой в двух местах. Такое внимание к данному углу не случайно – он однозначно определяется приращениями  $\Delta x$ и $\Delta y$ . Рассмотрим прямоугольный треугольник  и угол $a = \angle LKN$. Согласно школьному определению, тангенс угла равен отношению противолежащего катета к прилежащему катету: 
 
 $$
-tg(a) = LN/KN = \Delta y/\Delta x
+tg(a) = \frac{LN}{KN} = \frac{\Delta y}{\Delta x}
 $$
