--- a/11.md
+++ b/11.md
@@ -30,3 +30,9 @@ $$
 $$
 tg(a) = \frac{LN}{KN} = \frac{\Delta y}{\Delta x}
 $$
+
+# Геометрический смысл производной
+
+Пожалуйста, возьмите в руки обычную линейку и совместите её ребро с прямой $LN$. Да-да – приложите прямо к экрану монитора, не комплексуйте =) Вместо линейки можно использовать тетрадку, лист бумаги или даже руку.
+
+Теперь, согласно определению производной $f'(x_{0})$
