--- a/11.md
+++ b/11.md
@@ -35,4 +35,17 @@ $$
 
 Пожалуйста, возьмите в руки обычную линейку и совместите её ребро с прямой $LN$. Да-да – приложите прямо к экрану монитора, не комплексуйте =) Вместо линейки можно использовать тетрадку, лист бумаги или даже руку.
 
-Теперь, согласно определению производной $f'(x_{0})$
+Теперь, согласно определению производной $f'(x_{0}) = \lim_{\Delta x \to 0} \frac{\Delta y}{\Delta x}$ , медленно двигаем линейку влево к точке $x_{0}$, уменьшая тем самым приращение $\Delta x$. При этом приращение функции $\Delta y = LN$ тоже уменьшается: точка $N$ будет бесконечно близко приближаться к точке $K$ по горизонтали (красному отрезку), и точка $L$ – бесконечно близко приближаться к той же точке $K$, но уже по графику функции $y = f(x)$ (синей линии).
+
+В результате секущая $KL$ стремится занять положение касательной $y = kx+b$ к графику функции $y = f(x)$ в точке $x_{0}$. Искомая касательная  изображена зелёным цветом.
+
+Таким образом, мы получили строгое определение касательной к графику функции:
+Касательная к графику функции в точке – это предельное положение секущей в данной точке.
+Развиваем мысль дальше. Вспомним полученную ранее формулу тангенса угла наклона секущей $\frac{\Delta y}{\Delta x} = tg(a)$ и осуществим в обеих её частях так называемый предельный переход.
+Угол наклона $a$ секущей $KL$ стремится к углу наклона $\phi$  касательной $y = kx + b$ (последний дважды отмечен зелёными дугами). Аналогичное утверждение справедливо и для тангенсов данных углов: $tg(a) \to tg(\phi)$. В итоге: 
+$$
+\frac{\Delta y}{\Delta x} = tg(a) \to \lim_{\Delta x \to 0} \frac{\Delta y}{\Delta x} = tg(\phi)
+$$
+
+Вывод: производная функции в точке $x_{0}$ численно равна тангенсу угла наклона касательной к графику функции в данной точке: $f'(x_{0})=\lim_{\Delta x \to 0} \frac{\Delta y}{\Delta x} = tg(\phi)$
+А тангенс угла наклона касательной – это в точности её угловой коэффициент: $tg(\phi) = k$
