--- a/12.md
+++ b/12.md
@@ -1,2 +1,8 @@
 # Необходимое условие дифференцируемости
 
+Определение дифференциала функции:
+Пусть $y = f(x)$ дифференцируема на $(a,b)$.
+
+$$
+\forall x \in (a,b)
+$$
