--- a/12.md
+++ b/12.md
@@ -4,5 +4,5 @@
 Пусть $y = f(x)$ дифференцируема на $(a,b)$.
 
 $$
-\forall  x \in (a,b) \exists \lim_{\Delta x \tp 0}
+\forall  x \in (a,b)  \exists \lim_{\Delta x \tp 0} \frac{\Delta y}{\Delta x} = f'(x) \to \frac{\Delta y}{\Delta x} = f'(x) + a
 $$
