--- a/12.md
+++ b/12.md
@@ -6,3 +6,8 @@
 $$
 \forall  x \in (a,b)  \exists \lim_{\Delta x \to 0} \frac{\Delta y}{\Delta x} = f'(x) \Rightarrow \frac{\Delta y}{\Delta x} = f'(x) + a
 $$
+
+$a$ – бесконечно малая при $\Delta x \to 0$.
+Тогда
+$$ \Delta y = f'(x) * \Delta x + a(\Delta x) * \Delta x$$
+где $f'(x) * \Delta x$ есть $\mathrm{y}$
