--- a/12.md
+++ b/12.md
@@ -11,3 +11,5 @@ $a$ – бесконечно малая при $\Delta x \to 0$.
 Тогда
 $\Delta y = f'(x) * \Delta x + a(\Delta x) * \Delta x$
 где $f'(x) * \Delta x$ есть $\mathrm{y}$
+
+В общем случае $f'(x)!=$
