--- a/12.md
+++ b/12.md
@@ -12,5 +12,10 @@ $a$ – бесконечно малая при $\Delta x \to 0$.
 $\Delta y = f'(x) * \Delta x + a(\Delta x) * \Delta x$
 где $f'(x) * \Delta x$ есть $\mathrm{y}$
 
-В общем случае $f'(x) \neq 0 \Rightarrow \lim_{\Delta x \to 0} \frac{\mathrm{y}}{\Delta x} = f'(x) \Rightarrow \alpha * \Delta x = o(\Delta x)$ – бесконечно малая более высокого порядка малости
-чем $\Delta x$ , т. к. $\lim_{\Delta x \to 0} \frac{\alpha (\Delta x) * \Delta x}{\Delta x} = 0$
+В общем случае 
+
+$$f'(x) \neq 0 \Rightarrow \lim_{\Delta x \to 0} \frac{\mathrm{y}}{\Delta x} = f'(x) \Rightarrow \alpha * \Delta x = o(\Delta x)$$
+
+– бесконечно малая более высокого порядка малости чем $\Delta x$ , т. к. 
+
+$$\lim_{\Delta x \to 0} \frac{\alpha (\Delta x) * \Delta x}{\Delta x} = 0$$
