--- a/12.md
+++ b/12.md
@@ -10,22 +10,22 @@ $$
 $a$ – бесконечно малая при $\Delta x \to 0$.
 Тогда
 $\Delta y = f'(x) * \Delta x + a(\Delta x) * \Delta x$
-где $f'(x) * \Delta x$ есть $\mathrm{y}$
+где $f'(x) * \Delta x$ есть $\dd y$
 
 В общем случае 
 
-$$f'(x) \neq 0 \Rightarrow \lim_{\Delta x \to 0} \frac{\mathrm{y}}{\Delta x} = f'(x) \Rightarrow \alpha * \Delta x = o(\Delta x)$$
+$$f'(x) \neq 0 \Rightarrow \lim_{\Delta x \to 0} \frac{\dd y}{\Delta x} = f'(x) \Rightarrow \alpha * \Delta x = o(\Delta x)$$
 
 – бесконечно малая более высокого порядка малости чем $\Delta x$ , т. к. 
 
 $$\lim_{\Delta x \to 0} \frac{\alpha (\Delta x) * \Delta x}{\Delta x} = 0$$
 
 Итак, 
-Величина $\mathrm{y} = f'(x) * \Delta x$ называется дифференциалом функции $y = f(x)$ в точке $x$
+Величина $\dd y = f'(x) * \Delta x$ называется дифференциалом функции $y = f(x)$ в точке $x$
 
 $\mathrn{y}$ – главная линейная часть приращения функции.
 Главная, т. к. остаток $\alpha \Delta x$ – бесконечно малая более высокого порядка малости.
-Линейная, т. к. $\mathrm{y}$ пропорционален $\Delta x$ в первой степени.
+Линейная, т. к. $\dd y$ пропорционален $\Delta x$ в первой степени.
 
 Теорема:
 Необходимым и достаточным условием существования дифференциала является существование производной функции.
