--- a/12.md
+++ b/12.md
@@ -10,7 +10,7 @@ $$
 $a$ – бесконечно малая при $\Delta x \to 0$.
 Тогда
 $\Delta y = f'(x) * \Delta x + a(\Delta x) * \Delta x$
-где $f'(x) * \Delta x$ есть $\dd y$
+где $f'(x) * \Delta x$ есть $\dd{y}$
 
 В общем случае 
 
