--- a/12.md
+++ b/12.md
@@ -14,18 +14,18 @@ $\Delta y = f'(x) * \Delta x + a(\Delta x) * \Delta x$
 
 В общем случае 
 
-$$f'(x) \neq 0 \Rightarrow \lim_{\Delta x \to 0} \frac{\dd y}{\Delta x} = f'(x) \Rightarrow \alpha * \Delta x = o(\Delta x)$$
+$$f'(x) \neq 0 \Rightarrow \lim_{\Delta x \to 0} \frac{\mathrm{d} y}{\Delta x} = f'(x) \Rightarrow \alpha * \Delta x = o(\Delta x)$$
 
 – бесконечно малая более высокого порядка малости чем $\Delta x$ , т. к. 
 
 $$\lim_{\Delta x \to 0} \frac{\alpha (\Delta x) * \Delta x}{\Delta x} = 0$$
 
 Итак, 
-Величина $\dd y = f'(x) * \Delta x$ называется дифференциалом функции $y = f(x)$ в точке $x$
+Величина $\mathrm{d} y = f'(x) * \Delta x$ называется дифференциалом функции $y = f(x)$ в точке $x$
 
-$\mathrn{y}$ – главная линейная часть приращения функции.
+$\mathrn{d} y$ – главная линейная часть приращения функции.
 Главная, т. к. остаток $\alpha \Delta x$ – бесконечно малая более высокого порядка малости.
-Линейная, т. к. $\dd y$ пропорционален $\Delta x$ в первой степени.
+Линейная, т. к. $\mathrm{d} y$ пропорционален $\Delta x$ в первой степени.
 
 Теорема:
 Необходимым и достаточным условием существования дифференциала является существование производной функции.
