--- a/12.md
+++ b/12.md
@@ -29,4 +29,9 @@ $\mathrm{d} y$ – главная линейная часть приращени
 Линейная, т. к. $\mathrm{d} y$ пропорционален $\Delta x$ в первой степени.
 
 Теорема:
-Необходимым и достаточным условием существования дифференциала является существование производной функции.
+Необходимым и достаточным условием существования дифференциала является существование производной функции. Для этого нужно чтобы функция в каждой своей точке была непрерывна.
+
+Для функции $f(x)$, определенной в точке $a$, необходимо, чтобы выполнялось:
+Существование односторонних пределов:
+$\lim_{x \to a^-} f(x)$  (предел слева)
+$\lim_{x \to a^+} f(x)$  (предел справа)
