--- a/12.md
+++ b/12.md
@@ -32,8 +32,11 @@ $\mathrm{d} y$ – главная линейная часть приращени
 Необходимым и достаточным условием существования дифференциала является существование производной функции. Для этого нужно чтобы функция в каждой своей точке была непрерывна.
 
 Для функции $f(x)$, определенной в точке $a$, необходимо, чтобы выполнялось:
-Существование односторонних пределов:
+### Существование односторонних пределов:
 
 $\lim_{x \to a^-} f(x)$  (предел слева)
-
 $\lim_{x \to a^+} f(x)$  (предел справа)
+
+### Равенство односторонних пределов:
+
+$$\lim_{x \to a^-} f(x) = \lim_{x \to a^+} f(x) = f(a)$$
