--- a/12.md
+++ b/12.md
@@ -41,3 +41,6 @@ $\lim_{x \to a^+} f(x)$  (предел справа)
 ### Равенство односторонних пределов:
 
 $$\lim_{x \to a^-} f(x) = \lim_{x \to a^+} f(x) = f(a)$$
+
+Если хотя бы одно из этих условий не выполняется, функция не дифференцируема в точке $a$.
+
