--- a/12.md
+++ b/12.md
@@ -44,3 +44,8 @@ $$\lim_{x \to a^-} f(x) = \lim_{x \to a^+} f(x) = f(a)$$
 
 Если хотя бы одно из этих условий не выполняется, функция не дифференцируема в точке $a$.
 
+#  Линейность
+
+Функция $f(x)$ называется линейной, если для любых двух чисел $x_{1}$ и $x_{2}$ из области определения функции выполняется равенство:
+
+$f(x1 + x2) = f(x1) + f(x2)$
