--- a/12.md
+++ b/12.md
@@ -49,3 +49,13 @@ $$\lim_{x \to a^-} f(x) = \lim_{x \to a^+} f(x) = f(a)$$
 Функция $f(x)$ называется линейной, если для любых двух чисел $x_{1}$ и $x_{2}$ из области определения функции выполняется равенство:
 
 $f(x1 + x2) = f(x1) + f(x2)$
+
+# Производная произведения и частного
+
+Производная произведения двух функций $u(x)$ и $v(x)$ равна:
+
+$$f'(x) = \frac{d}{dx} [u(x)v(x)] = u'(x)v(x) + u(x)v'(x)$$
+
+Производная частного двух функций u(x) и v(x) равна:
+
+$$f'(x) = \frac{d}{dx} \left[ \frac{u(x)}{v(x)} \right] = \frac{\frac{d}{dx}[u(x)]v(x) - u(x)\frac{d}{dx}[v(x)]}{[v(x)]^2}$$
