--- a/13.md
+++ b/13.md
@@ -1,3 +1,5 @@
 # Таблица производных с выводом
 
 $$ln(x) = (\log_{e}x)' = \frac{1}{x\ln(e)} = \frac{1}{x}$$
+
+$$(sin x)' = \lim_{\Delta x \to 0} \frac{sin(x + \Delta x) - sin(x)}{\Delta x} = \lim_{\Delta x \to 0} \frac{2 sin(\frac{x + \Delta x - x}{2}) * cos(\frac{x + \Delta x - x})}{\Delta x}$$
