--- a/13.md
+++ b/13.md
@@ -2,6 +2,6 @@
 
 $$ln(x) = (\log_{e}x)' = \frac{1}{x\ln(e)} = \frac{1}{x}$$
 
-$$(sin x)' = \lim_{\Delta x \to 0} \frac{sin(x + \Delta x) - sin(x)}{\Delta x} = \lim_{\Delta x \to 0} \frac{2 sin(\frac{x + \Delta x - x}{2}) * cos(\frac{x + \Delta x - x})}{\Delta x}) = \lim_{\Delta x \to 0} \frac{2 sin(\frac{\Delta x}{2}) * cos(x + \frac{\Delta x}{x})}{\Delta x} = \lim_{\Delta x \to 0} \frac{2 sin(\frac{\Delta x}{2}) * cos(x + \frac{\Delta x}{x})}{2 * \frac{\Delta x}{2}} = cos(x)$$
+$$(sin x)' = \lim_{\Delta x \to 0} \frac{sin(x + \Delta x) - sin(x)}{\Delta x} = \lim_{\Delta x \to 0} \frac{2 sin(\frac{x + \Delta x - x}{2}) * cos(\frac{x + \Delta x - x})}{2}) = \lim_{\Delta x \to 0} \frac{2 sin(\frac{\Delta x}{2}) * cos(x + \frac{\Delta x}{x})}{\Delta x} = \lim_{\Delta x \to 0} \frac{2 sin(\frac{\Delta x}{2}) * cos(x + \frac{\Delta x}{x})}{2 * \frac{\Delta x}{2}} = cos(x)$$
 
 $$(cos x)' = \lim_{\Delta x \to 0} \frac{cos(x + \Delta x) - cos x}{\Delta x} = \lim_{\Delta x \to 0} \frac{-2 sin(\frac{x + \Delta x -x}{2}) * sin(\frac{x + \Delta x - x}{2})}{\Delta x} = \lim_{\Delta x \to 0} \frac{-2 sin(\frac{\Delta x}{x}) * sin(x + \frac{\Delta x}{x})}{2 * \frac{\Delta x}{x}} = -sin x$$
