--- a/13.md
+++ b/13.md
@@ -6,4 +6,10 @@ $$(sin x)' = \lim_{\Delta x \to 0} \frac{sin(x + \Delta x) - sin(x)}{\Delta x} =
 
 $$(cos x)' = \lim_{\Delta x \to 0} \frac{cos(x + \Delta x) - cos x}{\Delta x} = \lim_{\Delta x \to 0} \frac{-2 sin(\frac{x + \Delta x -x}{2}) * sin(\frac{x + \Delta x - x}{2})}{\Delta x} = \lim_{\Delta x \to 0} \frac{-2 sin(\frac{\Delta x}{x}) * sin(x + \frac{\Delta x}{x})}{2 * \frac{\Delta x}{x}} = -sin x$$
 
-$$(tg x)' = (\frac{cos x}{sin x})' = \frac{-(cos x)'sin x + cos x(sin x)'}{cos^2 x}$$
+$$(tg x)' = (\frac{sin x}{cos x})' = \frac{-(cos x)'sin x + cos x(sin x)'}{cos^2 x} = \frac{sin^2 x + cos^2 x}{cos^2 x} = \frac{1}{cos^2 x}$$
+
+$$(ctg x)' = (\frac{cos x}{sin x})' = \frac{(cos x)'sin x - cos x(sin x)'}{sin^2 x} = \frac{-sin^2 x - cos^2 x}{sin^2 x} = \frac{1}{sin^2 x}$$
+
+$$(arcsin x) = y ; x = sin x$$
+
+$$(arcsin x)' = \frac{1}{(sin y)'} = \frac{1}{cos y} = \frac{1}{\sqrt{1 - sin^2 y}} = \frac{1}{\sqrt{1 - x^2}}$$
