--- a/13.md
+++ b/13.md
@@ -13,3 +13,15 @@ $$(ctg x)' = (\frac{cos x}{sin x})' = \frac{(cos x)'sin x - cos x(sin x)'}{sin^2
 $$(arcsin x) = y ; x = sin x$$
 
 $$(arcsin x)' = \frac{1}{(sin y)'} = \frac{1}{cos y} = \frac{1}{\sqrt{1 - sin^2 y}} = \frac{1}{\sqrt{1 - x^2}}$$
+
+$$(arccos x) = y ; x = cos y$$
+
+$$(arccos x)' = \frac{1}{cos y} = \frac{1}{-sin y} = \frac{1}{-\sqrt{1 - cos^2 y}} = \frac{-1}{\sqrt{1 - x^2}}$$
+
+$$(arctg x) = y ; x = tg y$$
+
+$$(arctg x)' = \frac{1}{(tg y)'} = \frac{1}{\frac{1}{cos^2 y}} = \frac{1}{1 + tg^2 y} = \frac{1}{1 + x^2}$$
+
+$$(arcctg x) = y ; x = ctg y$$
+
+$$(arcctg x)' = \frac{1}{(ctg y)'} = \frac{1}{-\frac{1}{sin^2 y}} = \frac{-1}{1 + ctg^2 y} = \frac{11}{1 + x^2}$$
