--- a/14.md
+++ b/14.md
@@ -3,4 +3,12 @@
 Пример:
 $$y = u(x)^{\upsilon(x)}$$
 
-$$\ln{y}$$
+$$\ln{y} = \ln{u(x)^{\upsilon(x)}}$$
+
+$$\ln{y} = \upsilon(x) * \ln{u(x)}$$
+
+$$y = u(x)^\upsilon$$
+
+$$y' = \upsilon * u(x)^{\upsilon-1} * u'(x)$$
+
+$$y = x * u^{\upsilon(x)}$$
