--- a/14.md
+++ b/14.md
@@ -1,12 +1,4 @@
 # Метод логарифмического дифференцирования
 
 Пример:
-$$y = u(x)^{\upsilon(x)}$$
-
-$$\ln{y} = \ln{u(x)^{\upsilon(x)}}$$
-
-$$\ln{y} = \upsilon(x) * \ln{u(x)}$$
-
-$$y' = \upsilon * u(x)^{\upsilon-1} * u'(x)$$
-
-$$y = x * u^{\upsilon(x)}$$
+$$y = (sin x)^\sqrt{x}$$
