--- a/14.md
+++ b/14.md
@@ -2,3 +2,11 @@
 
 Пример:
 $$y = (sin x)^\sqrt{x}$$
+
+$$\ln{y} = \sqrt{x}\ln(sin x)$$
+
+$$\frac{1}{y'} * y' = \frac{1}{2\sqrt{x}}\ln{sin x} + \sqrt{x} * \frac{1}{sin x} * cos x$$
+
+$$y' = (\frac{1}{2\sqrt{x}})\ln{sin x} + \sqrt{x} * \frac{1}{sin x} * cos x$$
+
+$$y' = (\frac{1}{2\sqrt{2}}\ln{sin x} + \sqrt{x}\frac{cos x}{sin x}) * (sin x)^\sqrt{x}$$
