--- a/14.md
+++ b/14.md
@@ -10,3 +10,16 @@ $$\frac{1}{y'} * y' = \frac{1}{2\sqrt{x}}\ln{sin x} + \sqrt{x} * \frac{1}{sin x}
 $$y' = (\frac{1}{2\sqrt{x}})\ln{sin x} + \sqrt{x} * \frac{1}{sin x} * cos x$$
 
 $$y' = (\frac{1}{2\sqrt{2}}\ln{sin x} + \sqrt{x}\frac{cos x}{sin x}) * (sin x)^\sqrt{x}$$
+
+# Метод неявного дифференцирования
+
+Формула:
+
+$$y_{x}^{t} = \frac{y_{t}^{t}}{x_{t}^{t}}$$
+
+$$\begin{equation}
+\begin{align*}
+x = a * cos t \\
+y = a * sin t 
+\end{align*}
+\end{equation}$$
