--- a/14.md
+++ b/14.md
@@ -19,7 +19,7 @@ $$y_{x}^{t} = \frac{y_{t}^{t}}{x_{t}^{t}}$$
 
 $$\begin{equation}
 \begin{align*}
-x = a * cos t \\
-y = a * sin t 
+x &= a * cos t \\
+y &= a * sin t 
 \end{align*}
 \end{equation}$$
