--- a/14.md
+++ b/14.md
@@ -17,9 +17,4 @@ $$y' = (\frac{1}{2\sqrt{2}}\ln{sin x} + \sqrt{x}\frac{cos x}{sin x}) * (sin x)^\
 
 $$y_{x}^{t} = \frac{y_{t}^{t}}{x_{t}^{t}}$$
 
-$$\begin{equation}
-\begin{align*}
-x &= a * cos t \\
-y &= a * sin t 
-\end{align*}
-\end{equation}$$
+$$\left\{\begin{aligned}x&=a*cos(t)\\y&=a*sin(t)\end{aligned}\right.$$
