--- a/14.md
+++ b/14.md
@@ -17,7 +17,8 @@ $$y' = (\frac{1}{2\sqrt{2}}\ln{sin x} + \sqrt{x}\frac{cos x}{sin x}) * (sin x)^\
 
 $$y_{x}^{t} = \frac{y_{t}^{t}}{x_{t}^{t}}$$
 
-$$\begin{equation*}
+$$
+  \begin{equation*}
   \begin{cases}
   x&=a*cos{t}\\
   y&=a*sin{t} 
