--- a/14.md
+++ b/14.md
@@ -23,3 +23,5 @@ $$
   y = a*sin{t} 
   \end{cases}
 $$
+
+$$f(n) = \begin{cases} n/2, & \mbox{if } n\mbox{ is even} \\ 3n+1, & \mbox{if } n\mbox{ is odd} \end{cases}$$
