--- a/14.md
+++ b/14.md
@@ -17,11 +17,9 @@ $$y' = (\frac{1}{2\sqrt{2}}\ln{sin x} + \sqrt{x}\frac{cos x}{sin x}) * (sin x)^\
 
 $$y_{x}^{t} = \frac{y_{t}^{t}}{x_{t}^{t}}$$
 
-$$
-  \begin{cases}
-  x = a*cos{t}\\
-  y = a*sin{t} 
-  \end{cases}
-$$
-
-$$f(n) = \begin{cases} n/2, & \mbox{if } n\mbox{ is even} \\ 3n+1, & \mbox{if } n\mbox{ is odd} \end{cases}$$
+$$\begin{equation}
+\begin{cases}
+x = a \cos{t}, \\
+y = a \sin{t}.
+\end{cases}
+$$\end{equation}
