--- a/14.md
+++ b/14.md
@@ -17,9 +17,16 @@ $$y' = (\frac{1}{2\sqrt{2}}\ln{sin x} + \sqrt{x}\frac{cos x}{sin x}) * (sin x)^\
 
 $$y_{x}^{t} = \frac{y_{t}^{t}}{x_{t}^{t}}$$
 
+Пример:
+
 $$\begin{equation}
 \begin{cases}
 x = a \cos{t}, \\
 y = a \sin{t}.
 \end{cases}
 \end{equation}$$
+
+$$x' = -a\sin{t}$$
+$$y' = a\cos{t}$$
+
+$$y_{x}' = \frac{a\cos{t}}{-a\sin{t}} = -\ctg{t}
