--- a/14.md
+++ b/14.md
@@ -29,4 +29,4 @@ y = a \sin{t}.
 $$x' = -a\sin{t}$$
 $$y' = a\cos{t}$$
 
-$$y_{x}' = \frac{a\cos{t}}{-a\sin{t}} = -\ctg{t}
+$$y_{x}' = \frac{a\cos{t}}{-a\sin{t}} = -\ctg{t}$$
