--- a/14.md
+++ b/14.md
@@ -27,6 +27,7 @@ y = a \sin{t}.
 \end{equation}$$
 
 $$x' = -a\sin{t}$$
+
 $$y' = a\cos{t}$$
 
-$$y_{x}' = \frac{a\cos{t}}{-a\sin{t}} = -\ctg{t}$$
+$$y_{x}' = \frac{a\cos{t}}{-a\sin{t}} = -\cot{t}$$
