--- a/14.md
+++ b/14.md
@@ -30,4 +30,4 @@ $$x' = -a\sin{t}$$
 
 $$y' = a\cos{t}$$
 
-$$y_{x}' = \frac{a\cos{t}}{-a\sin{t}} = -\cot{t}$$
+$$y_{x}' = \frac{a\cos{t}}{-a\sin{t}} = -\cot(t)$$
