--- a/14.md
+++ b/14.md
@@ -11,7 +11,7 @@ $$y' = (\frac{1}{2\sqrt{x}})\ln{sin x} + \sqrt{x} * \frac{1}{sin x} * cos x$$
 
 $$y' = (\frac{1}{2\sqrt{2}}\ln{sin x} + \sqrt{x}\frac{cos x}{sin x}) * (sin x)^\sqrt{x}$$
 
-# Метод неявного дифференцирования
+# Параметрическое дифференцирование
 
 Формула:
 
@@ -31,3 +31,9 @@ $$x' = -a\sin{t}$$
 $$y' = a\cos{t}$$
 
 $$y_{x}' = \frac{a\cos{t}}{-a\sin{t}} = -ctg(t)$$
+
+# Метод неявного дифференцирования
+
+Пример:
+
+$$x^2+y^3+x\sin{y}-2x+5y=0$$
