--- a/14.md
+++ b/14.md
@@ -37,3 +37,17 @@ $$y_{x}' = \frac{a\cos{t}}{-a\sin{t}} = -ctg(t)$$
 Пример:
 
 $$x^2+y^3+x\sin{y}-2x+5y=0$$
+
+1 шаг: дифферинцируем функцию, помня, что y - функция $y(x)$
+
+2 шаг: в левой части оставляем слогаемые, содержащие $y'$
+
+3 шаг: выражаем $y'$ из уравнения
+
+$$2x+3y^2 \cdot y'+1 \cdot \sin{y}+x \cdot \cos{y} \cdot y' - 2 + 5y' = 0$$
+
+$$3y^2 \cdot y' + x \cdot \cos{y} \cdot y' +5y' = -2x + \sin{y} + 2$$
+
+$$y'(3y^2+x \cdot \cos{y}+5) = -2x + \sin{y} -2$$
+
+$$y' = \frac{2 - \sin{y} - 2x}{3y^2+x\cos{y}+5}$$
