--- a/15.md
+++ b/15.md
@@ -2,4 +2,4 @@
 
 Функция $f(x)$ в точке $x_{0}$ имеет локальный максимум, если
 
-$\forall x \in O_{\delta}(x_{0})$ $f(x_{0}) \geqslant f(x)$
+$\forall x \in O_{\delta}(x_{0})$ $f(x_{0}) \geqslant f(x)$ и $\forall x \in O_{\delta}(x_{0})$ $f(x_{0}) \leqslant f(x)$
