--- a/15.md
+++ b/15.md
@@ -3,3 +3,25 @@
 Функция $f(x)$ в точке $x_{0}$ имеет локальный максимум, если
 
 $\forall x \in O_{\delta}(x_{0})$ $f(x_{0}) \geqslant f(x)$ и $\forall x \in O_{\delta}(x_{0})$ $f(x_{0}) \leqslant f(x)$
+
+# Необходимые условия существования экстремума (Лемма Ферма)
+
+Если $f(x) в x_{0} диферинцируема и имеет экстремум, то $f(x_{0})' = 0$
+
+Пусть : $x_{0}$ - точка минимума
+
+$$f(x_{0}) \geqslant f(x)$$
+
+$$f(x_{0}) \geqslant f(x_{0} + \Delta x)$$
+
+$$f(x_{0}+\Delta x) - f(x_{0}) \leqslant 0$$
+
+$$f'(x_{0}) = \lim_{\Delta x \to 0} \frac{f(x_{0}+\Delta x) - f(x_{0})}{\Delta x} = \lim_{\Delta x \to 0} \frac{f(x_{0}+\Delta x) - f(x_{0})}{\Delta x}$$
+
+Необходимое условие экстремума не является достаточным доказательством, т.е. если производная равна 0, то это не значит что там целая функция
+
+Достаточным условием является критерий монотонности
+
+$y=f(x)$ $f(x)$ - монотонная, возрастающая, тогда и только тогда, когда производная не меняет знака
+
+Если f(x) - дифференцируема в оружности точки $x_{0}$ и при переходе производная меняет знак, то $x_{0}$ - экстремум, причем если меняется с `+` на `-` то $x_{0}$ - максимум, а если с `-` на `+` то это минимум
