--- a/16.md
+++ b/16.md
@@ -15,6 +15,8 @@
 Проведем хорду, соединяющую точки $A(a, f(a))$ и $B(b, f(b))$ , и запишем ее уравнение. Воспользовавшись уравнением прямой, проходящей через две точки на плоскости, получим: $\frac{x - a}{b - a} = \frac{y - f(a)}{f(b)- f(a)}$ , откуда: $y -f(a) = \frac{f(b)-f(a)}{
 b-a}(x - a)$ и $y = f(a)+ \frac{f(b)-f(a)}{b-a}(x-a)$
 
+Составим теперь вспомогательную функцию, вычтя из уравнения кривой уравнение хорды: $F(x) = f(x) -f(a)-\frac{f(b)-f(a)}{b - a}(x-a)$. Полученная функция $F(x)$ непрерывна на отрезке $[a.b]$ и дифференцируема во всех его внутренних точках. Кроме того, вычисление  $F(x)$ в точках $x =a$ и $x=b$ показывает, что $F(a)=F(b)=0$. Значит, функция$F(x)$ на отрезке  $[a.b]$ удовлетворяет требованиям теоремы Ролля. Но в этом случае существует такая точка $C \in (a,b), в которой $F'(C)=0$ . Вычислим производную функции $F(x): F'(x)=f'(x)-\frac{f(b)-f(a)}{b-a}$. Согласно теореме Ролля в точке $x=C$ производная $F'(C)=0$ , то есть $f'(C)-\frac{f(b)-f(a)}{b-a}=0$ и $f'(C)=\frac{f(b)-f(a)}{b-a}$,  что и требовалось доказать.
+
 # Геометрический смысл
 
  внутри отрезка $[a;b]$ существует, по крайней мере, одна точка, в которой касательная параллельна хорде, стягивающей кривую на данном отрезке. В частности, при $f(a) = f(b)$ теорема переходит в теорему Ролля.
