--- a/16.md
+++ b/16.md
@@ -2,7 +2,7 @@
 
 Пусть $f(x)$ непрерывна на отрезке $[a;b]$ и диферинцируема на $(a;b)$, тогда $\exists C \in (a;b) : f(C) = \frac{f(b)-f(a)}{b-a}$
 
-Доказательство:
+Доказательство(мы не проходили но я впихнул :) ):
 
 Рассмотрим график функции $y = f(x)$
 
@@ -19,6 +19,14 @@ b-a}(x - a)$ и $y = f(a)+ \frac{f(b)-f(a)}{b-a}(x-a)$
 
 # Геометрический смысл
 
- внутри отрезка $[a;b]$ существует, по крайней мере, одна точка, в которой касательная параллельна хорде, стягивающей кривую на данном отрезке. В частности, при $f(a) = f(b)$ теорема переходит в теорему Ролля.
+ На отрезке $(a,b)$ найдется $C$ в которой касательная будет параллельна.
 
 # Теорема Коши
+
+Пусть f(x) и g(x) непрерывны на отрезке $[a,b]$ и диферинцируемы на $(a,b)$, тогда $\exists C \in (a,b) : \frac{f'(C)}{g'(C)}=\frac{f(b)-f(a)}{g(b) - g(a)}$
+
+!!!Не является результатом двухкратного применения формулы Лагранжа!!!
+
+Формула Лагранжа можно рассматривать как частный случай формулы Коши.
+
+Это возможно если g(x)=x
