--- a/17.md
+++ b/17.md
@@ -2,4 +2,4 @@
 
 1) Пусть $f(x), g(x)$ непрерывны и диферинцируемы в некоторой окрестности в точке $x_{0}$ (может стремиться к бесконечности)
 
-$\lim_{x \to x_{0}} f(x) = 0$ и $\lim_{x \to x_{0}}g(x) = 0$ и $\exists \lim_{x \to x_{0}}\frac{f'(x)}{g'(x)} = k$ $\Rightarrow \exists \lim_{x \to x_{0}}\frac{f(x)}{g(x)} = k 
+$\lim_{x \to x_{0}} f(x) = 0$ и $\lim_{x \to x_{0}}g(x) = 0$ и $\exists \lim_{x \to x_{0}}\frac{f'(x)}{g'(x)} = k$ следовательно $\exists \lim_{x \to x_{0}}\frac{f(x)}{g(x)} = k 
