--- a/17.md
+++ b/17.md
@@ -3,3 +3,11 @@
 1) Пусть $f(x), g(x)$ непрерывны и диферинцируемы в некоторой окрестности в точке $x_{0}$ (может стремиться к бесконечности)
 
 $\lim_{x \to x_{0}} f(x) = 0$ и $\lim_{x \to x_{0}}g(x) = 0$ и $\exists \lim_{x \to x_{0}}\frac{f'(x)}{g'(x)} = k$ следовательно $\exists \lim_{x \to x_{0}}\frac{f(x)}{g(x)} = k$
+
+### Доказательство:
+
+$$\lim_{x \to x_{0}}f(x) = f(x_{0} = 0
+
+$$\lim_{x \to x_{0}}g(x) = g(x_{0}) = 0
+
+$$\lim_{x \to x_{0}} \frac{f(x)}{g(x)} = \lim_{x \to x_{0}}\frac{f(x)-f(x_{0})}{g(x)-g(x_{0})} = По теоремме Коши $\exists C \in (x_{0}, x) & (x, x_{0}) \Rightarrow \lim_{x \to x_{0}} \frac{f'(C)}{g'(C)} = k$
