--- a/17.md
+++ b/17.md
@@ -10,4 +10,4 @@ $$\lim_{x \to x_{0}}f(x) = f(x_{0} = 0
 
 $$\lim_{x \to x_{0}}g(x) = g(x_{0}) = 0
 
-$$\lim_{x \to x_{0}} \frac{f(x)}{g(x)} = \lim_{x \to x_{0}}\frac{f(x)-f(x_{0})}{g(x)-g(x_{0})} = По теоремме Коши $\exists C \in (x_{0}, x) & (x, x_{0}) \Rightarrow \lim_{x \to x_{0}} \frac{f'(C)}{g'(C)} = k$
+$$\lim_{x \to x_{0}} \frac{f(x)}{g(x)} = \lim_{x \to x_{0}}\frac{f(x)-f(x_{0})}{g(x)-g(x_{0})} = По теоремме Коши $\exists C \in (x_{0}, x) и (x, x_{0}) \Rightarrow \lim_{x \to x_{0}} \frac{f'(C)}{g'(C)} = k$
