--- a/17.md
+++ b/17.md
@@ -16,4 +16,4 @@ $\lim_{x \to x_{0}} \frac{f(x)}{g(x)} = \lim_{x \to x_{0}}\frac{f(x)-f(x_{0})}{g
 
 при этом:
 
-$\lim_{x \to x_{0}} f(x) = \inf$
+$\lim_{x \to x_{0}} f(x) = \infty$
