--- a/17.md
+++ b/17.md
@@ -20,8 +20,8 @@ $\lim_{x \to x_{0}} f(x) = \infty$ и $\lim_{x \to x_{0}}g(x) = \infty$ и $\exi
 
 В теории можно рассматривать случай, когда $x \to \infty$, формулировка сохраняется:
 
-$$\lim_{x \to 0}\frac{\sin{2x}-e^{4x}+2\cos{5x}-1}{\sin{8x}+3x}=\frac{0}{0}=\lim_{x \to 0} \frac{2\cos{2x}- 4e^{4x}-10\sin{5x}}{8\cos{8x}+3} = \frac{-2}{11}$
+$$\lim_{x \to 0}\frac{\sin{2x}-e^{4x}+2\cos{5x}-1}{\sin{8x}+3x}=\frac{0}{0}=\lim_{x \to 0} \frac{2\cos{2x}- 4e^{4x}-10\sin{5x}}{8\cos{8x}+3} = \frac{-2}{11}$$
 
-$$\lim_{x \to 0}\frac{\sin^8{5x}}{tg^9{2x}} = \lim_{x \to 0}\frac{(5x)^8}{(2x)^9}
+$$\lim_{x \to 0}\frac{\sin^8{5x}}{tg^9{2x}} = \lim_{x \to 0}\frac{(5x)^8}{(2x)^9}$$
 
-$$\lim_{x \to \infty}\frac{2x^100-6x^5-2}{7x^100+99x^30+4} = \frac{\infty}{\infty} = \frac{2}{7}
+$$\lim_{x \to \infty}\frac{2x^100-6x^5-2}{7x^100+99x^30+4} = \frac{\infty}{\infty} = \frac{2}{7}$$
