--- a/18.md
+++ b/18.md
@@ -1,2 +1,5 @@
 # Многочлен Тейлора и теорема о его существовании
 
+Пусть функция f(x) n раз непрерывно диферинцируется в точке:
+
+$$f(x) = \sum_{k = 0}^{n}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k+\frac{f^{(f+1)}(\xi)}{(n+1)!}(x-x_{0})^{n+1}$$
