--- a/18.md
+++ b/18.md
@@ -6,4 +6,4 @@ $$f(x) = \sum_{k = 0}^{\infty}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k+\frac{f^{(f+1
 
 # Разложение элементарных функций по формуле Маклорена
 
-f(x) = \sum_{k=0}^{\infty}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k
+f(x) = \sum_{k=0}^{\infty}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k$$
