--- a/18.md
+++ b/18.md
@@ -2,8 +2,8 @@
 
 Пусть функция f(x) n раз непрерывно диферинцируется в точке:
 
-$$f(x) = \sum_{k = 0}^{\infty}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k+\frac{f^{(f+1)}(\xi)}{(n+1)!}(x-x_{0})^{n+1}$$
+$$f(x) = \sum_{k=0}^{\infty}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k$$
 
 # Разложение элементарных функций по формуле Маклорена
 
-f(x) = \sum_{k=0}^{\infty}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k$$
+$$f(x) = \sum_{k=0}^{\infty}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k$$
