--- a/19.md
+++ b/19.md
@@ -2,3 +2,6 @@
 
 Функция f(x) называется монотонно возрастающей на интервале (a, b), если для любых двух значений $x_{1}$ и $x_{2}$ из этого интервала, таких что $x_{1} < x_{2}$,
 выполняется неравенство $f(x_{1}) ≤ f(x_{2})$.
+
+Функция f(x) называется монотонно убывающей на интервале (a, b), если для любых двух значений $x_{1}$ и $x_{2}$ из этого интервала, таких что $x_{1} < x_{2}$,
+выполняется неравенство $f(x_{1}) ≥ f(x_{2})$.
