--- a/19.md
+++ b/19.md
@@ -5,3 +5,11 @@
 
 Функция f(x) называется монотонно убывающей на интервале (a, b), если для любых двух значений $x_{1}$ и $x_{2}$ из этого интервала, таких что $x_{1} < x_{2}$,
 выполняется неравенство $f(x_{1}) ≥ f(x_{2})$.
+
+Теоремы о монотонности:
+
+Теорема 1: Если производная f'(x) непрерывна на интервале (a, b) и f'(x) > 0 (или f'(x) < 0) для всех x ∈ (a, b), то функция f(x) монотонно возрастает (или монотонно
+убывает) на этом интервале.
+
+Теорема 2: Если в точке $x_{0}$ производная $f'(x_{0}) = 0$ или не существует, то $x_{0} может быть точкой экстремума функции f(x).
+
