--- a/19.md
+++ b/19.md
@@ -13,3 +13,10 @@
 
 Теорема 2: Если в точке $x_{0}$ производная $f'(x_{0}) = 0$ или не существует, то $x_{0}$ может быть точкой экстремума функции $f(x)$.
 
+Алгоритм исследования:
+
+Найти производную f'(x).
+Определить области знаков производной.
+Проанализировать знаки производной в каждой области.
+Сделать выводы о монотонности функции на каждом интервале монотонности.
+Определить точки экстремума (при наличии).
