--- a/29.md
+++ b/29.md
@@ -7,7 +7,17 @@
     • Частное решение дифференциального уравнения — это решение, полученное из общего при различных числовых значениях произвольных постоянных.
 
 ДУ с разделяющимися переменными
+
   y' = dy/dx
+
   P1(x)*Q1(y)dx + P2(x)*Q2(y)dy = 0
-  P1(x)*Q1(y)dx = -P2(x)*Q2(y)dy 
-  
+
+  P1(x)*Q1(y)dx = -P2(x)*Q2(y)dy
+
+  (P1(x)dx)/(P2(x)) = -(Q2(y)dy)/(Q1(y))
+
+  ∫(P1(x)dx)/(P2(x)) = -∫(Q2(y)dy)/(Q1(y))
+
+  P(x) = Q(y) + C  
+
+Однородные уравнения
