--- a/10.md
+++ b/10.md
@@ -2,7 +2,7 @@
 
 Функция у=ƒ(х) называется непрерывной в интервале (a, b), если она непрерывна в каждой точке этого интервала.
 
-Функция у=ƒ(х) называется непрерывной на отрезке [а, b], если она непрерывна в интервале (a, b) и в точке х=а непрерывна справа (т.е. $\lim_{x \to a+0} f(x) = f(a) \lim_{x \to b - 0} f(x) = f(b)$)  а в точке x=b непрерывна слева (т. е. ).
+Функция у=ƒ(х) называется непрерывной на отрезке [а, b], если она непрерывна в интервале (a, b) и в точке х=а непрерывна справа (т.е. $\lim_{x \to a+0} f(x) = f(a) \lim_{x \to b - 0} f(x) = f(b)$ )  а в точке x=b непрерывна слева (т. е. ).
 
 # Свойства функций непрерывных на отрезке:
 
@@ -11,3 +11,5 @@
 2) Непрерывная на отрезке $[a,b]$ функция является ограниченной на этом отрезке.
 
 3) Если функция $y=f(x)$ является непрерывной на отрезке $[a,b]$ и принимает на концах этого отрезка неравные между собой значения, то есть $f(a)=a_{0}, f(b)=b_{0}$ то на этом отрезке функция принимает и все промежуточные значения между $a_{0}$ и $b_{0}$
+
+4) Если функция $y = f(x)$ которая непрерывна на некотором отрезке $[a,b]$, принимает на концах отрезка значения разных знаков, то существует такая точка $C \in [a,b]$ такая, что $f(C)=0$
