--- a/22.md
+++ b/22.md
@@ -1,5 +1,5 @@
 Необходимое условие перегиба:
-Если в точке x0 есть перегиб графика функции, то f"(x0) = 0 либо значение f"(x0) не существует
+Если в точке x0 есть перегиб графика функции, то $f"(x_{0}) = 0$ либо значение $f"(x_{0})$ не существует
 
 Достаточное условие перегиба:
-Если вторая производная y = f"(x) при переходе через точку x0 меняет знак, то в данной точке существует перегиб графика функции y = f(x)
+Если вторая производная $y = f"(x)$ при переходе через точку $x_{0}$ меняет знак, то в данной точке существует перегиб графика функции $y = f(x)$
