--- a/25.md
+++ b/25.md
@@ -1,2 +1,3 @@
-Интегрируемой на отрезке [a; b] функцией y=f(x) называют такую функцию, у которой имеется конечный предел ее интегральных сумм при λ→0.
+Интегрируемой на отрезке $[a;b]$ функцией $y=f(x)$ называют такую функцию, у которой имеется конечный предел ее интегральных сумм при $λ→0$.
+
 Данное значение предела называют определенным интегралом Римана.
