--- a/26.md
+++ b/26.md
@@ -7,7 +7,7 @@
     • При перестановке пределов интегрирования абсолютная величина определённого интеграла не меняется, а изменяется лишь его знак
     • Определённый интеграл равен произведению длины отрезка интегрирования на значение подынтегральной функции в некоторой точке x0 внутри его
     • Если верхний предел интегрирования больше нижнего и подынтегральная функция неотрицательна (положительна), то и определённый интеграл неотрицателен (положителен)
-    • Если верхний предел интегрирования больше нижнего и функции f(x) и g(x) непрерывны, то неравенство f(x) >=g(x) можно почленно интегрировать
+    • Если верхний предел интегрирования больше нижнего и функции $f(x)$ и $g(x)$ непрерывны, то неравенство $f(x) \geqslant g(x)$ можно почленно интегрировать
 
 Необходимое условие интегрируемости функции на отрезке заключается в том, что функция ограничена этим отрезком.
 Достаточное условие интегрируемости: если на некотором промежутке функция непрерывна, то она интегрируема на нём.
