--- a/27.md
+++ b/27.md
@@ -1,2 +1,2 @@
-Пусть функция f(x) интегрируема на отрезке [a; b] и ограничена на нём числами m и M так, что m ≤ f(x) ≤ M. Тогда существует такое число μ, что m ≤ μ ≤ M.
-Определённое число μ называют средним значением функции f(x) на отрезке [a; b], отсюда и название теоремы.
+Пусть функция $f(x)$ интегрируема на отрезке $[a; b]$ и ограничена на нём числами $m$ и $M$ так, что $m ≤ f(x) ≤ M$. Тогда существует такое число $μ$ , что $m ≤ μ ≤ M$.
+Определённое число $μ$ называют средним значением функции $f(x)$ на отрезке $[a; b]$, отсюда и название теоремы.
