--- a/29.md
+++ b/29.md
@@ -14,18 +14,18 @@
 
 ДУ с разделяющимися переменными
 
-  y' = dy/dx
+  $y' = dy/dx$
 
-  P1(x)*Q1(y)dx + P2(x)*Q2(y)dy = 0
+  $P1(x) \cdot Q1(y)dx + P2(x) \cdot Q2(y)dy = 0$
 
-  P1(x)*Q1(y)dx = -P2(x)*Q2(y)dy
+  $P1(x) \cdot Q1(y)dx = -P2(x) \cdot Q2(y)dy$
 
-  (P1(x)dx)/(P2(x)) = -(Q2(y)dy)/(Q1(y))
+  $\frac{P1(x)dx}{P2(x)} = \frac{-(Q2(y)dy)}{Q1(y)}$
 
-  ∫(P1(x)dx)/(P2(x)) = -∫(Q2(y)dy)/(Q1(y))
+  $∫\frac{P1(x)dx}{P2(x)} = -∫\frac{Q2(y)dy}{Q1(y)}$
 
-  P(x) = Q(y) + C  
+  $P(x) = Q(y) + C$  
 
 Однородные уравнения
 
-f(x,y) называется однородным порядка m если f(λx, λy) = λ^(m) * f(x,y)
+$f(x,y)$ называется однородным порядка $m$ если $f(λx, λy) = λ^{m} \cdot f(x,y)$
