--- a/30.md
+++ b/30.md
@@ -1,9 +1,9 @@
-Линейным дифференциальным уравнением первого порядка называется дифференциальное уравнение 1-го порядка, линейное относительно неизвестной функции y и её производной y¢.
+Линейным дифференциальным уравнением первого порядка называется дифференциальное уравнение 1-го порядка, линейное относительно неизвестной функции $y$ и её производной $y¢$.
 
 В общем случае линейное уравнение 1-го порядка можно записать в виде:
 
-y' + P(x)*y = Q(x),
+$y' + P(x) \cdot y = Q(x)$,
 
-где P(x), fQ(x) — заданные непрерывные функции.
+где $P(x)$, $fQ(x)$ — заданные непрерывные функции.
 
-Если Q(x) ≡ 0, то линейное уравнение называется однородным. В противном случае уравнение называется неоднородным.
+Если $Q(x) ≡ 0$, то линейное уравнение называется однородным. В противном случае уравнение называется неоднородным.
