--- a/21.md
+++ b/21.md
@@ -1,5 +1,5 @@
 Критерий выпуклости графика функции:
-График функции является выпуклым вниз (вверх) на интервале (a; b) тогда и только тогда, когда её первая производная на этом интервале монотонно возрастает (убывает).
+График функции является выпуклым вниз (вверх) на интервале $(a; b)$ тогда и только тогда, когда её первая производная на этом интервале монотонно возрастает (убывает).
 
 Достаточное условие выпуклости графика функции:
-Если вторая производная является отрицательной (положительной) в точке x0, то график этой функции в точке с координатами (x0, f(x0)) является выпуклым вверх (выпуклым вниз).
+Если вторая производная является отрицательной (положительной) в точке $x_{0}$, то график этой функции в точке с координатами $(x_{0}, f(x_{0}))$ является выпуклым вверх (выпуклым вниз).
