--- a/18.md
+++ b/18.md
@@ -2,7 +2,7 @@
 
 Пусть функция f(x) n раз непрерывно диферинцируется в точке:
 
-$$f(x) = \sum_{k=0}^{\infty}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k$$
+$$f(x) = \sum_{k=0}^{\infty}\frac{f^{(k)}(x_{0})}{k!}(x-x_{0})^k + \cdots + 0((x-x_{0})^n)$$
 
 # Разложение элементарных функций по формуле Маклорена
 
