--- a/26.md
+++ b/26.md
@@ -1,22 +1,76 @@
  Определенный интеграл имеет следующие свойства:
     
     • Определённый интеграл с одинаковыми пределами интегрирования равен нулю
+
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZKXXeh.png">
+ <source media="(prefers-color-scheme: light)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZKXXeh.png">
+ <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZKXXeh.png">
+</picture>
     
     • Величина определённого интеграла не зависит от обозначения переменной интегрирования
+
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-o4mBaY.png">
+ <source media="(prefers-color-scheme: light)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-o4mBaY.png">
+ <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-o4mBaY.png">
+</picture>
     
     • Постоянный множитель можно выносить за знак определённого интеграла
+
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-urXzly.png">
+ <source media="(prefers-color-scheme: light)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-urXzly.png">
+ <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-urXzly.png">
+</picture>
     
     • Определённый интеграл от алгебраической суммы конечного числа функций равен алгебраической сумме определённых интегралов
+
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-kPXWbh.png">
+ <source media="(prefers-color-scheme: light)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-kPXWbh.png">
+ <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-kPXWbh.png">
+</picture>
     
     • Если отрезок интегрирования разбит на части, то определённый интеграл по всему отрезку равен сумме определённых интегралов по его частям
+
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-a2vjbL.png">
+ <source media="(prefers-color-scheme: light)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-a2vjbL.png">
+ <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-a2vjbL.png">
+</picture>
     
     • При перестановке пределов интегрирования абсолютная величина определённого интеграла не меняется, а изменяется лишь его знак
+
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-6PwfxH.png">
+ <source media="(prefers-color-scheme: light)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-6PwfxH.png">
+ <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-6PwfxH.png">
+</picture>
     
     • Определённый интеграл равен произведению длины отрезка интегрирования на значение подынтегральной функции в некоторой точке x0 внутри его
+
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZV0hiE.png">
+ <source media="(prefers-color-scheme: light)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZV0hiE.png">
+ <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-ZV0hiE.png">
+</picture>
     
     • Если верхний предел интегрирования больше нижнего и подынтегральная функция неотрицательна (положительна), то и определённый интеграл неотрицателен (положителен)
+
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-vqZ2mh.png">
+ <source media="(prefers-color-scheme: light)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-vqZ2mh.png">
+ <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-vqZ2mh.png">
+</picture>
     
     • Если верхний предел интегрирования больше нижнего и функции $f(x)$ и $g(x)$ непрерывны, то неравенство $f(x) \geqslant g(x)$ можно почленно интегрировать
+
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-6zEdUx.png">
+ <source media="(prefers-color-scheme: light)" srcset="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-6zEdUx.png">
+ <img alt="26.1" src="https://studfile.net/html/2706/286/html_FnEsHjcpof.M4h8/img-6zEdUx.png">
+</picture>
 
 Необходимое условие интегрируемости функции на отрезке заключается в том, что функция ограничена этим отрезком.
 Достаточное условие интегрируемости: если на некотором промежутке функция непрерывна, то она интегрируема на нём.
