--- a/27.md
+++ b/27.md
@@ -1,5 +1,9 @@
 Пусть функция $f(x)$ интегрируема на отрезке $[a; b]$ и ограничена на нём числами $m$ и $M$ так, что $m ≤ f(x) ≤ M$. Тогда существует такое число $μ$ , что $m ≤ μ ≤ M$.
 
-https://wikimedia.org/api/rest_v1/media/math/render/svg/83e85c89b912d7145e6b94b3cb795d1f61793591
+<picture>
+ <source media="(prefers-color-scheme: dark)" srcset="https://wikimedia.org/api/rest_v1/media/math/render/svg/83e85c89b912d7145e6b94b3cb795d1f61793591">
+ <source media="(prefers-color-scheme: light)" srcset="https://wikimedia.org/api/rest_v1/media/math/render/svg/83e85c89b912d7145e6b94b3cb795d1f61793591">
+ <img alt="26.1" src="https://wikimedia.org/api/rest_v1/media/math/render/svg/83e85c89b912d7145e6b94b3cb795d1f61793591">
+</picture>
 
 Определённое число $μ$ называют средним значением функции $f(x)$ на отрезке $[a; b]$, отсюда и название теоремы.
