--- a/30.md
+++ b/30.md
@@ -1,4 +1,4 @@
-Линейным дифференциальным уравнением первого порядка называется дифференциальное уравнение 1-го порядка, линейное относительно неизвестной функции $y$ и её производной $y'.
+Линейным дифференциальным уравнением первого порядка называется дифференциальное уравнение 1-го порядка, линейное относительно неизвестной функции $y$ и её производной $y'$.
 
 В общем случае линейное уравнение 1-го порядка можно записать в виде:
 
