--- a/13.md
+++ b/13.md
@@ -10,7 +10,7 @@ $$(tg x)' = (\frac{sin x}{cos x})' = \frac{-(cos x)'sin x + cos x(sin x)'}{cos^2
 
 $$(ctg x)' = (\frac{cos x}{sin x})' = \frac{(cos x)'sin x - cos x(sin x)'}{sin^2 x} = \frac{-sin^2 x - cos^2 x}{sin^2 x} = \frac{1}{sin^2 x}$$
 
-$$(arcsin x) = y ; x = sin x$$
+$$(arcsin x) = y ; x = sin y$$
 
 $$(arcsin x)' = \frac{1}{(sin y)'} = \frac{1}{cos y} = \frac{1}{\sqrt{1 - sin^2 y}} = \frac{1}{\sqrt{1 - x^2}}$$
 
