--- a/15.md
+++ b/15.md
@@ -6,7 +6,7 @@ $\forall x \in O_{\delta}(x_{0})$ $f(x_{0}) \geqslant f(x)$ и $\forall x \in O_
 
 # Необходимые условия существования экстремума (Лемма Ферма)
 
-Если $f(x) в x_{0} диферинцируема и имеет экстремум, то $f(x_{0})' = 0$
+Если $f(x) в x_{0}$ диферинцируема и имеет экстремум, то $f(x_{0})' = 0$
 
 Пусть : $x_{0}$ - точка минимума
 
